Text alignment bug

--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -29,6 +29,7 @@
           text-align: left;
       }
       .description {
+        text-align: left;
         //display: none;
       }
       padding-left: 1em;
@@ -41,6 +42,7 @@
           }
           p{
               margin: 0 0 0 5px;
+              text-align: left;
           }
       }
     }
